--- a/views/base.twig
+++ b/views/base.twig
@@ -19,9 +19,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <link rel="icon" type="image/png" href="{{site.theme.link}}/favicon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300|Work+Sans:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo:300,600|Ubuntu:300" rel="stylesheet">
 
     <link rel="stylesheet" href="{{site.theme.link}}/style.css" type="text/css" media="screen" />
 
