fix(gallery): handle plugin update

--- a/views/home.twig
+++ b/views/home.twig
@@ -19,7 +19,7 @@
     <h1>{{ me.last_name }} {{ me.first_name }}</h1>
     <h2>{{ me.description }}</h2>
 
-    <a href="{{ site.link }}/curriculumvita.pdf" class="btn btn-primary btn-large">
+    <a href="http://bit.ly/b4n92uid-cv" class="btn btn-primary btn-large">
       <i class="fa fa-file-pdf-o"></i> T&eacute;l&eacute;charger mon CV en PDF
     </a>
   </header>
