chore: move bower dependencies to node_modules

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,4 +1,5 @@
 $fa-font-path:        "fonts" !default;
+$mdi-font-path:       "fonts" !default;
 $bootstrap-sass-asset-helper: false !default;
 //
 // Variables
