feat(icon): use @mdi/font

--- a/views/home.twig
+++ b/views/home.twig
@@ -20,7 +20,7 @@
     <h2>{{ me.description }}</h2>
 
     <a href="http://bit.ly/b4n92uid-cv" class="btn btn-primary btn-large">
-      <i class="fa fa-file-pdf-o"></i> T&eacute;l&eacute;charger mon CV en PDF
+      <i class="mdi mdi-file-pdf"></i> T&eacute;l&eacute;charger mon CV en PDF
     </a>
   </header>
 
