--- a/views/include/mini-header.twig
+++ b/views/include/mini-header.twig
@@ -27,19 +27,19 @@
                 <input type="text" class="form-control" placeholder="Recherche..." name="s">
               </div>
               <div class="input-group-btn">
-                <button type="submit" class="btn btn-link"><i class="fa fa-search"></i></button>
+                <button type="submit" class="btn btn-link"><i class="mdi mdi-magnify"></i></button>
               </div>
             </div>
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li>
               <a class="home" href="{{ site.link }}">
-                <i class="fa fa-home"></i> {{ __('Accueil') }}
+                <i class="mdi mdi-home"></i> {{ __('Accueil') }}
               </a>
             </li>
             <li>
               <a href="{{ site.link }}/curriculumvita.pdf" class="download">
-                <i class="fa fa-file-pdf-o"></i> T&eacute;l&eacute;charger mon CV en PDF
+                <i class="mdi mdi-file-pdf"></i> T&eacute;l&eacute;charger mon CV en PDF
               </a>
             </li>
           </ul>
