--- a/views/single.twig
+++ b/views/single.twig
@@ -4,7 +4,8 @@
 <script>
 	var mySwiper = new Swiper ('.swiper-container', {
     // Optional parameters
-    direction: 'horizontal',
+		direction: 'horizontal',
+		autoHeight: true,
 
     // If we need pagination
     pagination: '.swiper-pagination',
