[Home] Add linkedin profile link

--- a/views/home.twig
+++ b/views/home.twig
@@ -29,7 +29,12 @@
     <h1>{{ me.last_name }} {{ me.first_name }}</h1>
     <h2>{{ me.description }}</h2>
 
-    <a href="http://bit.ly/b4n92uid-cv" class="btn btn-primary btn-large">
+
+    <a href="https://www.linkedin.com/in/abdelghani-beldjouhri-07498542/" target="_blank" class="btn btn-primary btn-large">
+      <i class="mdi mdi-linkedin-box"></i> Profile LinkedIn
+    </a>
+
+    <a href="http://bit.ly/b4n92uid-cv" target="_blank" class="btn btn-primary btn-large">
       <i class="mdi mdi-file-pdf"></i> T&eacute;l&eacute;charger mon CV en PDF
     </a>
   </header>
